--- a/getting-started/src/index.css
+++ b/getting-started/src/index.css
@@ -4,27 +4,28 @@
   box-sizing: border-box;
 }
 html {
-  font-family: "Montserrat", sans-serif;
+  font-family: "McLaren", cursive;
 }
+
 body {
   background: #eee;
   padding: 0 16px;
 }
 
-header {
-  background-color: #f5ba13;
+.heading {
+  background-color: #F2BED1;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
 
-header h1 {
+.heading h1 {
   color: #fff;
   font-family: "McLaren", cursive;
   font-weight: 200;
 }
 
-footer {
+.footer {
   position: absolute;
   text-align: center;
   bottom: 0;
@@ -32,9 +33,10 @@ footer {
   height: 2.5rem;
 }
 
-footer p {
+.footer p {
   color: #ccc;
 }
+
 .note {
   background: #fff;
   border-radius: 7px;
@@ -59,12 +61,12 @@ footer p {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #f5ba13;
+  color: rgb(138, 137, 137);
   border: none;
-  width: 36px;
-  height: 36px;
   cursor: pointer;
   outline: none;
+  background-color: #F8E8EE;
+  font-family: "McLaren", cursive;
 }
 
 form {
@@ -76,6 +78,7 @@ form {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
+
 form input,
 form textarea {
   width: 100%;
@@ -86,11 +89,12 @@ form textarea {
   font-family: inherit;
   resize: none;
 }
+
 form button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #f5ba13;
+  background: #F2BED1;
   color: #fff;
   border: none;
   border-radius: 50%;
